# k8s-troubleshooting-labs

./: .gitignore  LEARNING-NOTES.md  LICENSE  README.md  cleanup.sh  deploy-all.sh  master-cleanup.sh  master-deploy.sh
ansible-labs/: ANSIBLE-PRACTICE-GUIDE.md  Dockerfile.target  README.md  cleanup.sh  deploy.sh  docker-compose.yml  lab-helper.sh  setup-ansible-env.sh
argo-workflows-labs/: README.md
argocd-labs/: README.md  cleanup.sh  deploy.sh  install-argocd.sh
aws-labs/: COST-INFO.md  README.md  setup-prerequisites.sh
azure-labs/: AZURE-LEARNING-GUIDE.md  README.md  cleanup-all.sh  deploy-all.sh  setup-prerequisites.sh
backstage-labs/: README.md  cleanup-all.sh
chaos-engineering-labs/: README.md
cicd-pipelines-labs/: README.md  cleanup.sh  deploy.sh
cilium-labs/: README.md
crossplane-labs/: README.md  deploy-all.sh
datadog-elk-labs/: README.md
devsecops-labs/: README.md
docker-labs/: README.md  cleanup.sh  deploy.sh
flux-labs/: README.md
git-labs/: README.md  cleanup-all.sh  deploy-all.sh
helm-labs/: README.md  cleanup-all.sh  deploy.sh
jenkins-labs/: Dockerfile  README.md  cleanup.sh  deploy.sh  install-plugins.sh  plugins.txt
kubernetes-labs/: README.md
kustomize-labs/: README.md
lab-01-crashloopbackoff/: README.md  broken-deployment.yaml  deploy.sh  namespace.yaml
lab-02-imagepullbackoff/: README.md  deploy.sh  namespace.yaml
python-labs/lab-15-packaging-and-venv/: README.md  broken_script.py  cleanup.sh  deploy.sh  pyproject.toml  setup.py  solution.md
python-labs/lab-15-packaging-and-venv/src/mytools/: __init__.py
(+2189 files in other folders)
