[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mytools"
version = "0.1.0"
description = "DevOps utility toolkit"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["lib"]
